--- a/ansible/inventories/vagrant/group_vars/all/apps/home-zwavejs2mqtt.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/home-zwavejs2mqtt.yml
@@ -5,3 +5,6 @@ zwavejs2mqtt_serial_device: ""
 zwavejs2mqtt_zwave_network_key: ""
 zwavejs2mqtt_session_secret: "DEFAULT_SESSION_SECRET_CHANGE_ME"
 zwavejs2mqtt_authentication_enabled: True
+zwavejs2mqtt_users:
+  - username: user
+    passwordHash: "686de76e7743269e:cd6ffd385b0356a3e60634761845064d03619bc985605d622f61a5bae627edc6e5afa0ec7fec29d7f4bdf45632ed4ad9875bbe82267ab2549db8a6b1a9da1152"
