--- a/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
@@ -38,10 +38,10 @@
 
 - name: Fetch Gotify token
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}/gotify/application"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ gotify.context_root }}/application"
     method: GET
     headers:
-      Host: "web.{{ web_base_domain }}"
+      Host: "gotify.web.{{ web_base_domain }}"
     return_content: yes
     validate_certs: no
     force_basic_auth: yes
