--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -39,7 +39,7 @@ airsonic:
     limits_cpu: "{{ airsonic_container_limits_cpu | default('1000m') }}"
     limits_memory: "{{ airsonic_container_limits_memory | default('512Mi') }}"
 
-  context_path: "{{ airsonic_context_path | default('/airsonic') }}"
+  context_root: "{{ airsonic_context_root | default('') }}"
   extra_java_opts: "{{ airsonic_extra_java_opts | default(airsonic_extra_java_opts_default) }}"
 
   ldap:
