--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -199,7 +199,7 @@ homer_config_services:
         target: "_blank"
       - name: "Deluge"
         logo: "assets/download/deluge.png"
-        url: "https://dl.{{ web_base_domain }}/deluge/"
+        url: "https://deluge.dl.intra.{{ web_base_domain }}{{ deluge_web.context_root }}"
         subtitle: "Torrent client"
         target: "_blank"
       - name: "PyLoad"
