Fix missing log and monitoring domains from DNS

--- a/ansible/inventories/vagrant/group_vars/all/dns-servers.yml
+++ b/ansible/inventories/vagrant/group_vars/all/dns-servers.yml
@@ -20,6 +20,10 @@ dns_static_domains:
     ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
   - name: "infra.intra.{{ web_base_domain }}"
     ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
+  - name: "log.intra.{{ web_base_domain }}"
+    ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
+  - name: "monitoring.intra.{{ web_base_domain }}"
+    ip: "{{ nginx_keepalived_instance_internal_virtual_ip }}"
   - name: "web.{{ web_base_domain }}"
     ip: "{{ nginx_keepalived_instance_public_virtual_ip }}"
   - name: "home.{{ web_base_domain }}"
