--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
@@ -42,7 +42,7 @@
           sum by (namespace, pod, cluster) (
               max by (namespace, pod, container, cluster) (
                 kube_pod_container_resource_requests{resource="memory",job="kube-state-metrics"}
-              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod) (
+              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod, cluster) (
                 kube_pod_status_phase{phase=~"Pending|Running"} == 1
               )
           )
@@ -59,7 +59,7 @@
           sum by (namespace, pod, cluster) (
               max by (namespace, pod, container, cluster) (
                 kube_pod_container_resource_requests{resource="cpu",job="kube-state-metrics"}
-              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod) (
+              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod, cluster) (
                 kube_pod_status_phase{phase=~"Pending|Running"} == 1
               )
           )
@@ -76,7 +76,7 @@
           sum by (namespace, pod, cluster) (
               max by (namespace, pod, container, cluster) (
                 kube_pod_container_resource_limits{resource="memory",job="kube-state-metrics"}
-              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod) (
+              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod, cluster) (
                 kube_pod_status_phase{phase=~"Pending|Running"} == 1
               )
           )
@@ -93,7 +93,7 @@
           sum by (namespace, pod, cluster) (
               max by (namespace, pod, container, cluster) (
                 kube_pod_container_resource_limits{resource="cpu",job="kube-state-metrics"}
-              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod) (
+              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod, cluster) (
                 kube_pod_status_phase{phase=~"Pending|Running"} == 1
               )
           )
