--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -15,6 +15,8 @@
       ) < 0.03
       and
       kubelet_volume_stats_used_bytes{job="kubelet", metrics_path="/metrics"} > 0
+      unless on(namespace, persistentvolumeclaim)
+      kube_persistentvolumeclaim_access_mode{ access_mode="ReadOnlyMany"} == 1
     for: 1m
     labels:
       severity: critical
@@ -35,6 +37,8 @@
       kubelet_volume_stats_used_bytes{job="kubelet", metrics_path="/metrics"} > 0
       and
       predict_linear(kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}[6h], 4 * 24 * 3600) < 0
+      unless on(namespace, persistentvolumeclaim)
+      kube_persistentvolumeclaim_access_mode{ access_mode="ReadOnlyMany"} == 1
     for: 1h
     labels:
       severity: warning
