--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
@@ -8,7 +8,7 @@
       summary: Filesystem is predicted to run out of space within the next 24 hours.
     expr: |
       (
-        node_filesystem_avail_bytes{job="node-exporter",fstype!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!=""} * 100 < 40
+        node_filesystem_avail_bytes{job="node-exporter",fstype!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!=""} * 100 < 20
       and
         predict_linear(node_filesystem_avail_bytes{job="node-exporter",fstype!=""}[6h], 24*60*60) < 0
       and
@@ -46,7 +46,7 @@
       and
         node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
       )
-    for: 1h
+    for: 30m
     labels:
       severity: warning
   - alert: NodeFilesystemAlmostOutOfSpace
@@ -61,7 +61,7 @@
       and
         node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
       )
-    for: 1h
+    for: 30m
     labels:
       severity: critical
   - alert: NodeFilesystemFilesFillingUp
