Fix docker-registry-ui notification url

--- a/ansible/install_applications/vars/infra-docker-registry-ui.yml
+++ b/ansible/install_applications/vars/infra-docker-registry-ui.yml
@@ -7,6 +7,7 @@ _docker_registry_ui_var_loader:
     tag: "0.9.3"
 
   event_api_token: "{{ docker_registry_ui_event_api_token | default('token') }}"
+  context_root: "{{ docker_registry_context_root | default('') }}"
 
 docker_registry_ui:
   enabled: "{{ docker_registry_ui_enabled | default(True) }}"
@@ -28,7 +29,7 @@ docker_registry_ui:
     limits_cpu: "{{ docker_registry_ui_container_limits_cpu | default('200m') }}"
     limits_memory: "{{ docker_registry_ui_container_limits_memory | default('32Mi') }}"
 
-  context_root: "{{ docker_registry_context_root | default('') }}"
+  context_root: "{{ _docker_registry_ui_var_loader.context_root }}"
   registry:
     username: "{{ docker_registry_ui_registry_username }}"
     password: "{{ docker_registry_ui_registry_password }}"
