--- a/ansible/install_applications/roles/infra-docker-registry.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/defaults/main.yml
@@ -8,7 +8,7 @@ docker_registry_enabled: true
 
 docker_registry_notification_endpoints:
   - name: docker-registry-ui
-    url: http://docker-registry-ui.infra-docker-registry-ui.svc.cluster.local:8000/docker-registry-ui/api/events
+    url: http://docker-registry-ui.infra-docker-registry-ui.svc.cluster.local:8000{{ _docker_registry_ui_var_loader.context_root }}/api/events
     headers:
       Authorization: Bearer {{ _docker_registry_ui_var_loader.event_api_token }}
     timeout: 1s
