--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -4,11 +4,8 @@
 _sickchill_var_loader:
   base_image:
     name: "python"
-    tag: "3.9.6-alpine3.14"
-  # v2021.06.16-1 doesn't start : https://github.com/SickChill/SickChill/issues/7177
-  version: "v2021.04.10-1"
-  #commit_sha is required for the updater to report the proper number of commits ahead
-  commit_sha: d76229cd404a162a707d189302990d8911ffe77e
+    tag: "3.9.7-slim-bullseye"
+  version: "2021.7.23-1"
   namespace: "download-sickchill"
 
 sickchill:
@@ -17,7 +14,6 @@ sickchill:
   namespace: "{{ _sickchill_var_loader.namespace }}"
   base_image: "{{ _sickchill_var_loader.base_image }}"
   version: "{{ _sickchill_var_loader.version }}"
-  commit_sha: "{{ _sickchill_var_loader.commit_sha }}"
   servername: "sickchill.{{ _sickchill_var_loader.namespace }}.svc.cluster.local"
 
   app_backup:
