--- a/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
+++ b/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
@@ -17,3 +17,9 @@ kubernetes_nfs_storage:
     reclaim_policy: Retain
     labels:
       detail: download
+  nfs-nvr:
+    nfs_server: "{{ hostvars[groups.controller[0]].ansible_host }}"
+    nfs_path: /opt/mock_nas/NVR
+    reclaim_policy: Retain
+    labels:
+      detail: nvr
