--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -156,6 +156,10 @@
   tags: kubernetes-app-home-zwavejs2mqtt
   when: zwavejs2mqtt_enabled | bool
 
+- import_playbook: app-home-frigate.yml
+  tags: kubernetes-app-home-frigate
+  when: frigate_enabled | bool
+
 - import_playbook: app-home-homeassistant.yml
   tags: kubernetes-app-home-homeassistant
   when: homeassistant_enabled | bool
