--- a/ansible/install_applications/vars/home-frigate.yml
+++ b/ansible/install_applications/vars/home-frigate.yml
@@ -37,6 +37,7 @@ frigate:
     requests_memory: "{{ frigate_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ frigate_container_limits_cpu | default('250m') }}"
     limits_memory: "{{ frigate_container_limits_memory | default('256Mi') }}"
+    limits_gpu: "{{ frigate_container_limits_gpu | default({}) }}"
     # (width * height * 1.5 * 7 + 270480)/1048576 = <shm size in mb>
     shm_size: "{{ frigate_container_shm_size | default('64Mi') }}"
 
