--- a/ansible/inventories/vagrant/host_vars/master-test-3/kubernetes-postinstall.yml
+++ b/ansible/inventories/vagrant/host_vars/master-test-3/kubernetes-postinstall.yml
@@ -11,6 +11,8 @@ kubernetes_node_labels:
     value: 'yes'
   - name: capability/gpu
     value: "no"
+  - name: capability/tpu
+    value: "no"
 
 kubernetes_node_taints:
   - key: node-role.kubernetes.io/master
