--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-ansible==2.10.7
+ansible==4.6.0
 
 # Crypto dependencies
-passlib
-bcrypt
+passlib==1.7.4 
+bcrypt==3.2.0
 
 # k8s modules dependencies
-openshift==0.11.2
-# With kubernetes >= 12, k8s modules try to call kubernetes on the default localhost:80 server and not the one configured in kubeconfig
-kubernetes<12.0.0
+openshift==0.12.1 
 
 # docker modules dependencies
-docker==4.4.4
+docker==5.0.2 
 
 # ldap modules dependencies
 python-ldap==3.3.1 
